# Django_project

my_django_project/: pyproject.toml
my_django_project/my_django_project/app_on_django/: apps.py  forms.py  models.py  tasks.py  urls.py  views.py
my_django_project/my_django_project/app_on_django/migrations/: 0001_initial.py  0002_alter_authors_born_date.py  002_alter_authors_born_date.py
my_django_project/my_django_project/app_on_django/templates/quotes_and_autors_app/: adding_quote.html
my_django_project/my_django_project/quotes_project/: settings.py  urls.py
my_django_project/my_django_project/users/: views.py
