[tool.poetry]
name = "my_django_project"
version = "0.1.0"
description = "My done homework"
authors = ["SergiyDovgopolyk <dovgopolyks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
django = "5.0"
psycopg2-binary = "2.9.9"
celery = "5.3.6"
redis = "5.0.1"
beautifulsoup4 = "4.12.2"
requests = "2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
